--- a/src/components/main/message/index.scss
+++ b/src/components/main/message/index.scss
@@ -1,5 +1,5 @@
 .message {
-    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     .container {
@@ -44,8 +44,7 @@
         overflow-y: hidden;
         transition: height .2s;
         li {
-            flex: 1;
-            min-width: 16%;
+            flex: 1 1 16%;
             & > div {
                 width: 100%;
             }
